@@ -4,7 +4,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class Method_Reference {
+public class Method_Constructor_Reference {
     public static void main(String[] args) {
         List<String> strangers = List.of("El", "Max", "Nancy");
         
@@ -16,7 +16,7 @@ public class Method_Reference {
         // Constructor Reference
         List<String> employees = Arrays.asList("Mike", "Lucas");
         employees.stream().map(x -> new Employee(x)).collect(Collectors.toList());
-        employees.stream().map(Employee::new).collect(Collectors.toList());
+        employees.stream().map(Employee::new).toList();
     }
 }
 
